changing to virtual threads scenario 10